Fixed horizontal scrollbar

--- a/themes/land/css/100-layout.css
+++ b/themes/land/css/100-layout.css
@@ -79,6 +79,7 @@ main > .container {
     max-width: 1000px;
     margin: 0 auto;
     padding: 0 10px;
+    box-sizing: border-box;
 }
 
 
@@ -124,4 +125,5 @@ footer > .container {
     max-width: 1000px;
     margin: 0 auto;
     padding: 0 10px;
+    box-sizing: border-box;
 }
